fix homepage contact button not staying central on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,10 @@ ul li a {
     background-color: rgba(41, 56, 71, .8);
     position: absolute; 
     line-height: 200%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #contact-button {
@@ -87,7 +91,7 @@ ul li a {
     border-style: none;
     border-radius: 5px;
     max-width: 35%;
-    margin: 10px 0 20px 200px;
+    margin-bottom: 15px;
 }
 
 #contact-button h3 {
@@ -730,6 +734,7 @@ td {
     }
 
     #hero-overlay-text {
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
